--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solana/web3.js": "^1.95.3",
     "airtable": "^0.12.2",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "grammy": "^1.29.0",
     "node-cron": "^3.0.3"
